--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
-      
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9.9.0
       
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+      
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
+      
+      - name: Install wasm-pack
+        run: cargo install wasm-pack
       
       - name: Install dependencies
         run: pnpm install
