--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint": "biome check . && cargo clippy --all-targets --workspace",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "generate:clickhouse-data": "npx tsx scripts/generate-clickhouse-data.ts",
+    "generate:clickhouse-data:all": "pnpm generate:clickhouse-data 25.6 && pnpm generate:clickhouse-data 25.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
