fix: resolve lint warnings and set biome maxSize for large data files

--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": true
+    "ignoreUnknown": true,
+    "maxSize": 3145728
   }
 }
