--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -1,10 +1,9 @@
+# Exclude dev/source files
 .vscode/**
 .vscode-test/**
 src/**
 tsconfig.json
 tsup.config.ts
 *.map
-*.ts
-!*.d.ts
 coverage/**
-
+node_modules/**
