feat: add Python support to Moose LSP
- Implemented project detection for Python projects using `pyproject.toml`, `requirements.txt`, and `setup.py`.
- Introduced a new Python service for managing Python files and extracting SQL locations.
- Updated README to reflect support for both TypeScript and Python.
- Enhanced project detection logic to return project type (TypeScript, Python, or both).
- Added tests for Python project detection and SQL extraction.

This update expands the functionality of the Moose LSP to support Python, allowing for SQL validation in Python files alongside TypeScript.

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moosestack-lsp",
   "displayName": "MooseStack LSP",
-  "description": "Language Server for Moose TypeScript projects. Provides real-time SQL syntax validation, completions, and hover documentation for ClickHouse SQL in sql tagged templates.",
+  "description": "Language Server for Moose projects. Provides real-time SQL syntax validation, completions, and hover documentation for ClickHouse SQL in TypeScript and Python files.",
   "version": "0.1.0",
   "publisher": "514-labs",
   "icon": "icon.png",
@@ -18,11 +18,13 @@
     "moose",
     "lsp",
     "language-server",
-    "typescript"
+    "typescript",
+    "python"
   ],
   "activationEvents": [
     "onLanguage:typescript",
-    "onLanguage:typescriptreact"
+    "onLanguage:typescriptreact",
+    "onLanguage:python"
   ],
   "main": "./dist/extension.js",
   "contributes": {
