--- a/packages/lsp-server/package.json
+++ b/packages/lsp-server/package.json
@@ -14,7 +14,8 @@
     "sql",
     "moose",
     "clickhouse",
-    "typescript"
+    "typescript",
+    "python"
   ],
   "main": "dist/server.js",
   "bin": {
@@ -36,6 +37,8 @@
   "dependencies": {
     "@514labs/moose-sql-validator-wasm": "workspace:*",
     "glob": "^10.3.10",
+    "tree-sitter": "^0.25.0",
+    "tree-sitter-python": "^0.25.0",
     "typescript": "^5.3.0",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
