--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,29 @@ on:
         required: false
         type: boolean
         default: true
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
+      npm-tag:
+        required: false
+        type: string
+        default: "latest"
+      pre-release:
+        required: false
+        type: boolean
+        default: false
+    secrets:
+      NPM_TOKEN:
+        required: true
+      VSCE_PAT:
+        required: true
+      OVSX_PAT:
+        required: true
 
 concurrency:
-  group: publish
+  group: publish-${{ inputs.version || github.event.release.tag_name }}
   cancel-in-progress: false
 
 jobs:
@@ -60,17 +80,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build all packages
-        run: pnpm build
-
       - name: Get version
         id: version
         env:
-          EVENT_NAME: ${{ github.event_name }}
-          INPUT_VERSION: ${{ github.event.inputs.version }}
+          INPUT_VERSION: ${{ inputs.version }}
           RELEASE_TAG: ${{ github.event.release.tag_name }}
         run: |
-          if [ "${EVENT_NAME}" == "workflow_dispatch" ]; then
+          if [ -n "${INPUT_VERSION}" ]; then
             VERSION="${INPUT_VERSION}"
           else
             VERSION="${RELEASE_TAG}"
@@ -88,12 +104,29 @@ jobs:
             exit 1
           fi
 
-      - name: Update extension version
+      - name: Set version across all packages
         env:
           VERSION: ${{ steps.version.outputs.version }}
         run: |
-          cd packages/vscode-extension
           npm version "${VERSION}" --no-git-tag-version
+          cd packages/sql-validator-wasm && npm version "${VERSION}" --no-git-tag-version && cd ../..
+          cd packages/lsp-server && npm version "${VERSION}" --no-git-tag-version && cd ../..
+          cd packages/vscode-extension && npm version "${VERSION}" --no-git-tag-version && cd ../..
+
+      - name: Build all packages
+        run: pnpm build
+
+      - name: Resolve publish settings
+        id: settings
+        env:
+          INPUT_PRE_RELEASE: ${{ inputs.pre-release }}
+          INPUT_NPM_TAG: ${{ inputs.npm-tag }}
+        run: |
+          PRE_RELEASE="${INPUT_PRE_RELEASE:-false}"
+          NPM_TAG="${INPUT_NPM_TAG:-latest}"
+          echo "pre-release=${PRE_RELEASE}" >> "$GITHUB_OUTPUT"
+          echo "npm-tag=${NPM_TAG}" >> "$GITHUB_OUTPUT"
+          echo "Pre-release: ${PRE_RELEASE}, npm tag: ${NPM_TAG}"
 
       - name: Prepare extension server bundle
         run: |
@@ -121,9 +154,15 @@ jobs:
         run: npm install -g @vscode/vsce
 
       - name: Package extension
+        env:
+          PRE_RELEASE: ${{ steps.settings.outputs.pre-release }}
         run: |
           cd packages/vscode-extension
-          vsce package --no-dependencies
+          if [ "${PRE_RELEASE}" == "true" ]; then
+            vsce package --no-dependencies --pre-release
+          else
+            vsce package --no-dependencies
+          fi
 
       - name: Upload npm build artifacts
         uses: actions/upload-artifact@v4
@@ -146,10 +185,12 @@ jobs:
 
     outputs:
       version: ${{ steps.version.outputs.version }}
+      pre-release: ${{ steps.settings.outputs.pre-release }}
+      npm-tag: ${{ steps.settings.outputs.npm-tag }}
 
   publish-npm:
     needs: build
-    if: ${{ github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish-npm == 'true') }}
+    if: ${{ github.event.inputs.publish-npm != 'false' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -166,18 +207,17 @@ jobs:
 
       - name: Publish @514labs/moose-lsp to npm
         env:
-          VERSION: ${{ needs.build.outputs.version }}
+          NPM_TAG: ${{ needs.build.outputs.npm-tag }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cd lsp-server
-          npm version "${VERSION}" --no-git-tag-version
           # Remove bundled workspace dependency (it's included in dist/node_modules)
           node -e "const pkg = require('./package.json'); delete pkg.dependencies['@514labs/moose-sql-validator-wasm']; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2))"
-          npm publish --access public
+          npm publish --access public --tag "${NPM_TAG}"
 
   publish-vscode:
     needs: build
-    if: ${{ github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish-vscode == 'true') }}
+    if: ${{ github.event.inputs.publish-vscode != 'false' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -195,6 +235,9 @@ jobs:
         run: npm install -g @vscode/vsce
 
       - name: Publish to VS Code Marketplace
+        env:
+          PRE_RELEASE: ${{ needs.build.outputs.pre-release }}
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: |
           shopt -s nullglob
           vsix_files=( *.vsix )
@@ -202,13 +245,15 @@ jobs:
             echo "::error::Expected exactly one .vsix file, found ${#vsix_files[@]}: ${vsix_files[*]}"
             exit 1
           fi
-          vsce publish --packagePath "${vsix_files[0]}"
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+          if [ "${PRE_RELEASE}" == "true" ]; then
+            vsce publish --packagePath "${vsix_files[0]}" --pre-release
+          else
+            vsce publish --packagePath "${vsix_files[0]}"
+          fi
 
   publish-openvsx:
     needs: build
-    if: ${{ github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish-openvsx == 'true') }}
+    if: ${{ github.event.inputs.publish-openvsx != 'false' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -226,6 +271,9 @@ jobs:
         run: npm install -g ovsx
 
       - name: Publish to Open VSX
+        env:
+          PRE_RELEASE: ${{ needs.build.outputs.pre-release }}
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
         run: |
           shopt -s nullglob
           vsix_files=( *.vsix )
@@ -233,6 +281,8 @@ jobs:
             echo "::error::Expected exactly one .vsix file, found ${#vsix_files[@]}: ${vsix_files[*]}"
             exit 1
           fi
-          ovsx publish "${vsix_files[0]}"
-        env:
-          OVSX_PAT: ${{ secrets.OVSX_PAT }}
+          if [ "${PRE_RELEASE}" == "true" ]; then
+            ovsx publish "${vsix_files[0]}" --pre-release
+          else
+            ovsx publish "${vsix_files[0]}"
+          fi
