--- a/.github/workflows/dev-publish.yml
+++ b/.github/workflows/dev-publish.yml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write
 
 concurrency:
   group: dev-publish-pr-${{ github.event.pull_request.number }}
@@ -51,3 +52,33 @@ jobs:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       VSCE_PAT: ${{ secrets.VSCE_PAT }}
       OVSX_PAT: ${{ secrets.OVSX_PAT }}
+
+  comment:
+    needs: [compute-version, publish]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Post or update PR comment
+        env:
+          GH_TOKEN: ${{ github.token }}
+          VERSION: ${{ needs.compute-version.outputs.version }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          BODY="$(cat <<EOF
+          **Dev Build Published**
+
+          | Package | Version | Install |
+          |---------|---------|---------|
+          | npm | \`${VERSION}\` | \`npm install @514labs/moose-lsp@${VERSION}\` |
+          | VS Code Extension | \`${VERSION}\` | Search "MooseStack LSP" → Switch to Pre-Release Version |
+          <!-- dev-build-comment -->
+          EOF
+          )"
+
+          # Update existing comment or create a new one
+          EXISTING=$(gh pr view "${PR_NUMBER}" --repo "${{ github.repository }}" --json comments --jq '.comments[] | select(.body | contains("<!-- dev-build-comment -->")) | .url' | tail -1)
+          if [ -n "${EXISTING}" ]; then
+            COMMENT_ID=$(basename "${EXISTING}")
+            gh api repos/${{ github.repository }}/issues/comments/"${COMMENT_ID}" -X PATCH -f body="${BODY}"
+          else
+            gh pr comment "${PR_NUMBER}" --repo "${{ github.repository }}" --body "${BODY}"
+          fi
