--- a/.github/workflows/dev-publish.yml
+++ b/.github/workflows/dev-publish.yml
@@ -35,6 +35,7 @@ jobs:
           # Follow the odd/even minor convention: even minor = stable, odd minor = pre-release.
           # This ensures pre-release versions are always higher than stable, and the next
           # stable release (even minor) will be higher than all pre-releases.
+          # Add 1 to bump the minor and bitwise-OR with 1 to force DEV_MINOR to be odd (pre-release).
           DEV_MINOR=$(( (MINOR + 1) | 1 ))
           DEV_PATCH=$(( PR_NUMBER * 10000 + RUN_NUMBER * 10 + RUN_ATTEMPT ))
           DEV_VERSION="${MAJOR}.${DEV_MINOR}.${DEV_PATCH}"
@@ -56,6 +57,8 @@ jobs:
   comment:
     needs: [compute-version, publish]
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Post or update PR comment
         env:
